--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 :root {
   --color1: #090727;
+  --color2: #816FF9;
   --btnColor: #FF8A00;
-  --tittleColor: rgb(255, 255, 255);
+  --tittleColor: #7CB7EF;
   ---pColor: #DFDFDF;
   --autre: turquoise;
+  --transparant: #507ca461;
 }
 
 * {
@@ -23,6 +25,7 @@ body {
 
 a {
   color: var(--btnColor);
+  text-decoration-line: none;
 }
 
 header {
@@ -49,4 +52,205 @@ nav li:hover {
 
 .logo {
   display: flex;
+}
+
+.logo a {
+  text-decoration: none;
+  cursor: default;
+  color: var(--autre);
+}
+
+.logo h4 {
+  margin-top: 8px;
+  margin-right: -10px;
+}
+
+.logo img {
+  width: 40px;
+
+}
+
+
+.home-head {
+  min-height: 50vh;
+  background: url(./assets/images/bg.jpg) center/cover;
+  background-attachment: fixed;
+}
+
+.home h1 {
+  margin: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 6.5rem;
+  color: var(--tittleColor);
+  font-weight: 900;
+}
+
+.home h3 {
+  margin: 15px;
+  text-align: center;
+  font-size: 2rem;
+  background: var(--transparant);
+  color: var(--autre);
+}
+
+.home p {
+  margin: 10px;
+}
+
+.service-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+h2 {
+  text-transform: uppercase;
+  text-align: center;
+  margin: 5px;
+  color: var(--color2);
+}
+
+.service {
+  border: 8px solid var(--color2);
+  margin: 10px;
+  background: var(--tittleColor);
+  color: var(--color1);
+  transition: 0.4s;
+}
+
+.service:hover {
+  background: var(--color1);
+  color: var(---pColor);
+  margin: 0 auto;
+}
+
+.whyme {
+  border: 4px solid var(--color2);
+  border-radius: 15px;
+}
+
+.whyme,
+.contact {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+}
+
+.whyme h3,
+.whyme p {
+  text-align: center;
+  margin: 10px;
+}
+
+.reson {
+  background: var(--transparant);
+  margin: 10px;
+}
+
+h5 {
+  text-align: center;
+  margin: 10px;
+}
+
+.about-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-content: center;
+}
+
+.value {
+  background: var(--color2);
+  margin: 10px;
+  border-radius: 15px;
+}
+
+.value-container {
+  display: flex;
+  justify-content: center;
+}
+
+.value-container p {
+  font-size: 0.8rem;
+}
+
+.contactG p {
+  text-align: center;
+}
+
+.image-logo img {
+  width: 100%;
+}
+
+.cont {
+  display: grid;
+  grid-template-columns: 30% 70%;
+}
+
+.nom,
+.mail {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+
+}
+
+
+.text {
+  display: grid;
+  grid-template-rows: 30% 70%;
+  width: 100%;
+}
+
+form {
+  border: 4px solid var(--color2);
+  border-radius: 5px;
+  background: var(--transparant);
+  padding-bottom: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "i1 i2"
+    "ta ta"
+    "vi bt";
+}
+
+.text {
+  grid-area: ta;
+}
+
+#submit {
+  grid-area: bt;
+  height: 50px;
+  transition: 0.4s;
+}
+
+#submit:hover {
+  cursor: pointer;
+  background: var(--btnColor);
+}
+
+input,
+textarea {
+  border: 2px solid var(--color2);
+  border-radius: 15px;
+}
+
+input:focus,
+textarea:focus {
+  background: var(--color1);
+  padding: 20px;
+  color: var(--tittleColor);
+}
+
+label {
+  color: var(--btnColor);
+}
+
+label:hover {
+  cursor: pointer;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
 }
